remade UI and added display for displaying values onto UI

--- a/calc.html
+++ b/calc.html
@@ -2,41 +2,41 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Calculator built using JS, HTML, CSS</title>
+        <title>Calculator</title>
         <script src="main.js" defer></script>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
-        <title>Calculator for all your basic needs!</title>
-        <p>Built by @Gabriel-05-dev</p>
-        <div class="mainProgram">
-            <div class ="calculator">
-                <div class="display">
-                    <p class="output">012312</p>
-                </div>
-                <div class="AC">
-                    <button class="clear">Clear</button>
-                </div>
-                <div class="buttons">
-                    <button class="button">1</button>
-                    <button class="button">2</button>
-                    <button class="button">3</button>
-                    <button class="button">+</button>
-                    <button class="button">4</button>
-                    <button class="button">5</button>
-                    <button class="button">6</button>
-                    <button class="button">-</button>
-                    <button class="button">7</button>
-                    <button class="button">8</button>
-                    <button class="button">9</button>
-                    <button class="button">*</button>
-                    <button class="button">0</button>
-                    <button class="button">.</button>
-                    <button class="button">=</button>
-                    <button class="button">/</button>
-                </div>
-                        
-                </div>
-            </div>
+<body>
+    <div class="calcBody">
+        <div class="display">
+            <p class="displayContent"></p>
         </div>
-    </body>
+        <div class="row">
+            <button class="clear">clear</button>
+        </div>
+        <div class="row">
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
+            <button class="operator">/</button>
+        </div>
+        <div class="row">
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
+            <button class="operator">X</button>
+        </div>
+        <div class="row">
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
+            <button class="operator">-</button>
+        <div class="row">
+            <button class="number">0</button>
+            <button class="number">.</button>
+            <button class="operator">=</button>
+            <button class="operator">+</button>
+        </div>
+        </div>
+    </div>
+</body>
