--- a/calc.html
+++ b/calc.html
@@ -24,7 +24,7 @@
             <button class="number">4</button>
             <button class="number">5</button>
             <button class="number">6</button>
-            <button class="operator">X</button>
+            <button class="operator">*</button>
         </div>
         <div class="row">
             <button class="number">7</button>
@@ -34,7 +34,7 @@
         <div class="row">
             <button class="number">0</button>
             <button class="number">.</button>
-            <button class="operator">=</button>
+            <button class="evaluate">=</button>
             <button class="operator">+</button>
         </div>
         </div>
