--- a/calc.html
+++ b/calc.html
@@ -7,36 +7,38 @@
         <link rel="stylesheet" href="style.css">
     </head>
 <body>
-    <div class="calcBody">
-        <div class="display">
-            <p class="displayContent"></p>
-        </div>
-        <div class="row">
-            <button class="clear">clear</button>
-        </div>
-        <div class="row">
-            <button class="number">1</button>
-            <button class="number">2</button>
-            <button class="number">3</button>
-            <button class="operator">/</button>
-        </div>
-        <div class="row">
-            <button class="number">4</button>
-            <button class="number">5</button>
-            <button class="number">6</button>
-            <button class="operator">*</button>
-        </div>
-        <div class="row">
-            <button class="number">7</button>
-            <button class="number">8</button>
-            <button class="number">9</button>
-            <button class="operator">-</button>
-        <div class="row">
-            <button class="number">0</button>
-            <button class="number">.</button>
-            <button class="evaluate">=</button>
-            <button class="operator">+</button>
-        </div>
+    <div class="all">
+        <div class="calcBody">
+            <div class="display">
+                <p class="displayContent"></p>
+            </div>
+            <div class="row">
+                <button class="clear">clear</button>
+            </div>
+            <div class="row">
+                <button class="number">1</button>
+                <button class="number">2</button>
+                <button class="number">3</button>
+                <button class="operator">/</button>
+            </div>
+            <div class="row">
+                <button class="number">4</button>
+                <button class="number">5</button>
+                <button class="number">6</button>
+                <button class="operator">*</button>
+            </div>
+            <div class="row">
+                <button class="number">7</button>
+                <button class="number">8</button>
+                <button class="number">9</button>
+                <button class="operator">-</button>
+            <div class="row">
+                <button class="number">0</button>
+                <button class="number">.</button>
+                <button class="evaluate">=</button>
+                <button class="operator">+</button>
+            </div>
+            </div>
         </div>
     </div>
 </body>
