addded styling, information and ironed out layout including color/fonts/e.t.c

--- a/calc.html
+++ b/calc.html
@@ -7,6 +7,16 @@
         <link rel="stylesheet" href="style.css">
     </head>
 <body>
+    <div class="introduction">
+        <p class="tag"><a href="https://github.com/gabriel-05-dev" rel="noopener" >@Gabriel-05-Dev</a></p>
+        <p class="content">Calculator built without use of the "eval" function.</p>
+        <p class="content listInfo">Why is eval not used?</p>
+        <ul>
+            <em><li class="list">Usage of the eval function involves risk of running malicious code.</li>
+            <li class="list">Difficult to debug.</li>
+            <li class="list">Executes the code passed with caller privileges.</li></em>
+        </ul>
+    </div>
     <div class="all">
         <div class="calcBody">
             <div class="display">
@@ -19,13 +29,13 @@
                 <button class="number">1</button>
                 <button class="number">2</button>
                 <button class="number">3</button>
-                <button class="operator">/</button>
+                <button class="operator">÷</button>
             </div>
             <div class="row">
                 <button class="number">4</button>
                 <button class="number">5</button>
                 <button class="number">6</button>
-                <button class="operator">*</button>
+                <button class="operator">×</button>
             </div>
             <div class="row">
                 <button class="number">7</button>
