Added event handling on division by 0, fixed overflow issue, calculator now rounds to 3dp

--- a/calc.html
+++ b/calc.html
@@ -9,7 +9,7 @@
 <body>
     <div class="introduction">
         <p class="tag"><a href="https://github.com/gabriel-05-dev" rel="noopener" >@Gabriel-05-Dev</a></p>
-        <p class="content">Calculator built without use of the "eval" function.</p>
+        <p class="content">Calculator built without use of the "eval" function. (returns to 3.dp)</p>
         <p class="content listInfo">Why is eval not used?</p>
         <ul>
             <em><li class="list">Usage of the eval function involves risk of running malicious code.</li>
